--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,10 @@
     <string name="by_place">Par lieu</string>
     <string name="save_button">Enregistrer</string>
     <string name="date">Date :</string>
-    <string name="begin_hour">Heure de début</string>
-    <string name="finish_hour">Heure de fin</string>
-    <string name="meeting_date">Date de la réunion</string>
-    <string name="meeting_name">Nom de la réunion</string>
+    <string name="begin_hour">00:00</string>
+    <string name="finish_hour">00:00</string>
+    <string name="meeting_date">Exemple : 25/08/1976</string>
+    <string name="meeting_name">Nom de la réunion (Exemple : Logistique)</string>
     <string name="meeting_room">Salle de réunion :</string>
     <string name="participants">Participant</string>
     <string name="add_participant">Ajouter</string>
