--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
     <string name="begin_hour">Cliquer ici</string>
     <string name="finish_hour">Cliquer ici</string>
     <string name="meeting_date">Cliquer ici</string>
-    <string name="meeting_name">Nom de la réunion</string>
-    <string name="meeting_room">Salle de réunion :</string>
-    <string name="participants">Participants</string>
+    <string name="meeting_name">Renseigner le nom de la réunion</string>
+    <string name="meeting_room">Renseigner le nom de la réunion</string>
+    <string name="participants">Renseigner les emails des participants</string>
     <string name="add_participant">Ajouter</string>
     <string name="begin_hour_2points">Heure de début :</string>
     <string name="finish_hour_2points">Heure de fin :</string>
