optimisation code tri et filtre + 1 seul booléen sur modèle Meeting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,7 @@
     <string name="item_text_date">08h00</string>
     <string name="item_text_meeting">Réunion 1</string>
     <string name="trash">trash</string>
+    <string name="nameRoom">Nom de la salle :</string>
+    <string name="commaParticipants">\", \"</string>
 
 </resources>
